Parse settings from profile file; bugfixes